--- a/style.css
+++ b/style.css
@@ -23,12 +23,16 @@
     margin-right: 100px;
     margin-left: 100px;
     margin-bottom: 0;
+    100px 50px 0px 120px;
 }
 /* banner style */
  .banner{
     display: flex;
     justify-content: space-between;
-    margin: 100px 30px 0 120px;
+    padding: 50px 60px;
+    margin-right: 100px;
+    margin-left: 120px;
+    margin-top: 100px;
     text-align: center;
  }
  .heading-1{
@@ -42,4 +46,14 @@
     font-size: 20px;
     padding: 18px 35px;
     border-radius: 5px; 
+    margin-top: 30px;
+    
+}
+
+
+.header{
+   background-image: url(./assets/Hero-bg.png), url(./assets/Group.png);
+   background-repeat: no-repeat;
+   background-position: top center;
+   
 }
