--- a/style.css
+++ b/style.css
@@ -110,3 +110,23 @@ main section{
    margin: 20px 90px 0 80px ;
 
 }
+
+.section-2{
+   text-align: center;
+   margin-top: 10px;
+}
+.heading-5 {
+   font-weight: 800;
+   font-size: 30px;
+}
+.para-5{
+   color:olive;
+   font-size: 18px;
+   margin-bottom: 10px;
+
+}
+
+   .text-1{
+      margin-bottom: 10px;
+   }
+
