--- a/style.css
+++ b/style.css
@@ -130,3 +130,43 @@ main section{
       margin-bottom: 10px;
    }
 
+.heading-6{
+   text-align: center;
+}
+.para-6{
+   text-align: center;
+   justify-content: space-between;
+   padding: 15px 20px;
+   margin-right: 10px;
+   margin-left: 20px;
+}
+
+.tech-container{
+   display: flex;
+   gap: 24px;
+   margin-top: 20px;
+}
+
+.btn-primary{
+   font-weight: 1000;
+   color: black;
+   border: none;
+  background: none; 
+}
+.html-1{
+   margin-left: 30px;
+   padding: 30px;
+    border-radius: 5px;
+    background-color: rgba(255, 76, 30, 0.18);
+}
+.css-1{
+   padding: 30px;
+   border-radius: 5px;
+   background-color: rgba(0, 76, 232, 0.04);
+}
+
+.js-1{
+   padding: 30px;
+   border-radius: 5px;
+   background-color: rgba(0, 0, 0, 0.02);
+}
