--- a/style.css
+++ b/style.css
@@ -170,3 +170,25 @@ main section{
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.02);
 }
+
+.footer-1{
+   display: flex;
+   justify-content: space-between;
+   padding: 0 100px 0 100px;
+}
+
+
+
+
+.btn-secondary{
+   font-weight: 1000;
+   color: black;
+   border: 5px;
+  background-color: white;
+  padding: 10px 15px;
+display: flex;
+justify-content: space-between;
+}
+
+
+
